update regex, find optimal number of topic and automated topicc

--- a/Modeling/LDA.ipynb
+++ b/Modeling/LDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
        " None)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +57,7 @@
     "import pandas as pd\n",
     "\n",
     "# Load the provided CSV file to analyze its structure\n",
-    "file_path = 'resources/extracted_data.csv'\n",
+    "file_path = '../resources/extracted_data.csv'\n",
     "data = pd.read_csv(file_path)\n",
     "\n",
     "# Display the first few rows of the data to understand its structure\n",
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
     "    \"they're\", \"they've\", \"this\", \"those\", \"through\", \"to\", \"too\", \"under\", \"until\", \"up\", \"very\", \"was\", \"wasn't\", \n",
     "    \"we\", \"we'd\", \"we'll\", \"we're\", \"we've\", \"were\", \"weren't\", \"what\", \"what's\", \"when\", \"when's\", \"where\", \n",
     "    \"where's\", \"which\", \"while\", \"who\", \"who's\", \"whom\", \"why\", \"why's\", \"with\", \"won't\", \"would\", \"wouldn't\", \n",
-    "    \"you\", \"you'd\", \"you'll\", \"you're\", \"you've\", \"your\", \"yours\", \"yourself\", \"yourselves\"\n",
+    "    \"you\", \"you'd\", \"you'll\", \"you're\", \"you've\", \"your\", \"yours\", \"yourself\", \"yourselves\",\"copyright\",\"©\" \n",
     "])\n",
     "\n",
     "# Updated preprocessing function\n",
@@ -161,7 +161,7 @@
     "df = pd.DataFrame(data[['Organizations' , 'Processed_Abstracts']])\n",
     "# Save to CSV\n",
     "if not df.empty:\n",
-    "    df.to_csv('resources/sciencedirect_carbon_emissions.csv', index=False, encoding='utf-8')\n",
+    "    df.to_csv('../resources/sciencedirect_carbon_emissions.csv', index=False, encoding='utf-8')\n",
     "    print(f\"Data saved to 'sciencedirect_carbon_emissions.csv'. Fetched {len(df)} results.\")\n",
     "else:\n",
     "    print(\"No data fetched. Check the scraping process.\")\n"
@@ -169,20 +169,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['energy', 'carbon', 'development'],\n",
-       " ['climate', 'change', 'research'],\n",
-       " ['model', 'study', 'waste'],\n",
-       " ['co2', 'carbon', 'energy'],\n",
-       " ['climate', 'energy', 'change']]"
+       "[['carbon', 'energy', 'co2'],\n",
+       " ['energy', 'waste', 'thailand'],\n",
+       " ['climate', 'change', 'study'],\n",
+       " ['climate', 'change', 'study'],\n",
+       " ['co2', 'oil', 'gas']]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
