--- a/Modeling/LDA.ipynb
+++ b/Modeling/LDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -10,45 +10,45 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 179 entries, 0 to 178\n",
+      "RangeIndex: 71157 entries, 0 to 71156\n",
       "Data columns (total 4 columns):\n",
-      " #   Column            Non-Null Count  Dtype \n",
-      "---  ------            --------------  ----- \n",
-      " 0   Title             179 non-null    object\n",
-      " 1   Organizations     179 non-null    object\n",
-      " 2   Publication Year  179 non-null    int64 \n",
-      " 3   Abstracts         179 non-null    object\n",
+      " #   Column       Non-Null Count  Dtype \n",
+      "---  ------       --------------  ----- \n",
+      " 0   title        71157 non-null  object\n",
+      " 1   affiliation  71156 non-null  object\n",
+      " 2   year         71157 non-null  int64 \n",
+      " 3   abstract     71147 non-null  object\n",
       "dtypes: int64(1), object(3)\n",
-      "memory usage: 5.7+ KB\n"
+      "memory usage: 2.2+ MB\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(                                               Title  \\\n",
-       " 0  Cross-sectoral analysis of water usage in Thai...   \n",
-       " 1  Relationships between causal factors affecting...   \n",
-       " 2  A Study on the Evaluation Tendency of Thermal ...   \n",
-       " 3  A Study on the Effect of Environment Sound on ...   \n",
-       " 4  Water balance of pine forests: Synthesis of ne...   \n",
+       "(                                               title  \\\n",
+       " 0  The impact of the establishment of carbon emis...   \n",
+       " 1  Research on Agricultural Carbon Emissions and ...   \n",
+       " 2  Environmental Kuznets curve of carbon emission...   \n",
+       " 3  China's total carbon emissions and carbon peak...   \n",
+       " 4  Carbon Sinks and Carbon Emissions Discrepancie...   \n",
        " \n",
-       "                                        Organizations  Publication Year  \\\n",
-       " 0     Chulalongkorn University, Thammasat University              2022   \n",
-       " 1                           Chulalongkorn University              2020   \n",
-       " 2  Chulalongkorn University, Sugiyama Jogakuen Un...              2022   \n",
-       " 3  Kyushu Sangyo University, Sugiyama Jogakuen Un...              2022   \n",
-       " 4  Chulalongkorn University, Duke University, Swe...              2023   \n",
+       "                                          affiliation  year  \\\n",
+       " 0                                   Jinan University  2022   \n",
+       " 1  Faculty of International Trade, Shanxi Univers...  2020   \n",
+       " 2  School of Civil Engineering and Transportation...  2024   \n",
+       " 3        Suzhou University of Science and Technology  2023   \n",
+       " 4                                Tsinghua University  2024   \n",
        " \n",
-       "                                            Abstracts  \n",
-       " 0  © 2018, Chulalongkorn University. All rights r...  \n",
-       " 1  © 2019 by the authors.This research aims to an...  \n",
-       " 2  © 2018 Web Portal IOP. All rights reserved.Cli...  \n",
-       " 3  © 2018 Web Portal IOP. All rights reserved.In ...  \n",
-       " 4  © 2018 Elsevier B.V.The forest hydrologic cycl...  ,\n",
+       "                                             abstract  \n",
+       " 0  The China government focuses on changes in car...  \n",
+       " 1  Carbon emissions and strategies for reducing t...  \n",
+       " 2  Carbon emissions from China’s forest products ...  \n",
+       " 3  Background To cope with the problem of global ...  \n",
+       " 4  Assessing discrepancies between carbon sinks a...  ,\n",
        " None)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +57,7 @@
     "import pandas as pd\n",
     "\n",
     "# Load the provided CSV file to analyze its structure\n",
-    "file_path = '../resources/extracted_data.csv'\n",
+    "file_path = '../resources/cleaned_file.csv'\n",
     "data = pd.read_csv(file_path)\n",
     "\n",
     "# Display the first few rows of the data to understand its structure\n",
@@ -102,14 +102,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data saved to 'sciencedirect_carbon_emissions.csv'. Fetched 179 results.\n"
+      "<class 'pandas.core.series.Series'>\n",
+      "RangeIndex: 71157 entries, 0 to 71156\n",
+      "Series name: abstract\n",
+      "Non-Null Count  Dtype \n",
+      "--------------  ----- \n",
+      "71147 non-null  object\n",
+      "dtypes: object(1)\n",
+      "memory usage: 556.0+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "data['abstract'].info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data saved to 'cleaned_processdata.csv'. Fetched 71157 results.\n"
      ]
     }
    ],
@@ -148,7 +172,7 @@
     "    return ' '.join(words)\n",
     "\n",
     "# Apply preprocessing to the Abstracts column\n",
-    "data['Processed_Abstracts'] = data['Abstracts'].apply(preprocess_text_basic)\n",
+    "data['Processed_Abstracts'] = data['abstract'].apply(lambda x : preprocess_text_basic(str(x)))\n",
     "\n",
     "# Display processed data\n",
     "# data[['Abstracts', 'Processed_Abstracts']].head()\n",
@@ -158,11 +182,11 @@
     "#     data['Organizations'][i] = 'Distirct {i}'.format(i=i)\n",
     "\n",
     "# data.head()\n",
-    "df = pd.DataFrame(data[['Organizations' , 'Processed_Abstracts']])\n",
+    "df = pd.DataFrame(data[['affiliation' , 'Processed_Abstracts']])\n",
     "# Save to CSV\n",
     "if not df.empty:\n",
-    "    df.to_csv('../resources/sciencedirect_carbon_emissions.csv', index=False, encoding='utf-8')\n",
-    "    print(f\"Data saved to 'sciencedirect_carbon_emissions.csv'. Fetched {len(df)} results.\")\n",
+    "    df.to_csv('../resources/cleaned_processdata.csv', index=False, encoding='utf-8')\n",
+    "    print(f\"Data saved to 'cleaned_processdata.csv'. Fetched {len(df)} results.\")\n",
     "else:\n",
     "    print(\"No data fetched. Check the scraping process.\")\n"
    ]
