--- a/Preparation/cleanData.ipynb
+++ b/Preparation/cleanData.ipynb
@@ -243,7 +243,7 @@
    "outputs": [],
    "source": [
     "# Geolocator setup\n",
-    "geolocator = Nominatim(user_agent=\"geoapiExercises\")\n",
+    "geolocator = Nominatim(user_agent=\"geoapi\")\n",
     "\n",
     "# Function to get latitude and longitude\n",
     "def get_coordinates(x):\n",
