--- a/src/ProcessData.ipynb
+++ b/src/ProcessData.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,10 +118,7 @@
     "    return ' '.join(words)\n",
     "\n",
     "# Apply preprocessing to the abstracts column\n",
-    "data['Processed_Abstracts'] = data['abstract'].apply(lambda x: preprocess_text_basic(str(x)))\n",
-    "\n",
-    "# Display processed data\n",
-    "# data[['abstract', 'Processed_Abstracts']].head()\n"
+    "data['Processed_Abstracts'] = data['abstract'].apply(lambda x: preprocess_text_basic(str(x)))\n"
    ]
   },
   {
